hphp/hack/test/typecheck/array_filter1.php
<?hh // partial

function test() {
  array_filter(0);
}
